--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -16,11 +16,14 @@
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@vanilla-extract/css": "^1.15.1",
+    "@zip.js/zip.js": "^2.7.44",
+    "crc-32": "^1.2.2",
     "dexie": "^4.0.4",
     "gb-wasm": "link:../../crates/gb-wasm/npm",
-    "hash-wasm": "^4.11.0",
     "immer": "^10.1.1",
+    "js-xxhash": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8",
