--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -20,6 +20,7 @@
     "@vanilla-extract/css": "^1.15.1",
     "@zip.js/zip.js": "^2.7.44",
     "crc-32": "^1.2.2",
+    "dayjs": "^1.11.11",
     "dexie": "^4.0.4",
     "gb-wasm": "link:../../crates/gb-wasm/npm",
     "immer": "^10.1.1",
