chore: production deploy on release branch
https://developers.cloudflare.com/pages/configuration/branch-build-controls/#branch-build-controls

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "release"]
     paths:
       - ".github/workflows/ci.yml"
       - "app/**"
@@ -114,7 +114,7 @@ jobs:
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
-        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') }}
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && env.BRANCH_NAME != 'main'}}
         id: cloudflare-publish
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
