--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@vanilla-extract/css": "^1.15.1",
     "@zip.js/zip.js": "^2.7.44",
@@ -26,6 +28,7 @@
     "gb-wasm": "link:../../crates/gb-wasm/npm",
     "immer": "^10.1.1",
     "js-xxhash": "^3.0.1",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8",
@@ -34,6 +37,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
