chore: enable main branch deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
-        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') && env.BRANCH_NAME != 'main'}}
+        if: ${{ !startsWith(env.BRANCH_NAME, 'renovate/') }}
         id: cloudflare-publish
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
