--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -16,9 +16,12 @@
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@vanilla-extract/css": "^1.15.1",
+    "@unocss/reset": "^0.60.2",
     "@zip.js/zip.js": "^2.7.44",
     "crc-32": "^1.2.2",
     "dayjs": "^1.11.11",
@@ -26,6 +29,7 @@
     "gb-wasm": "link:../../crates/gb-wasm/npm",
     "immer": "^10.1.1",
     "js-xxhash": "^3.0.1",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.13.8",
@@ -34,10 +38,12 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@vanilla-extract/vite-plugin": "^4.0.9",
+    "@unocss/preset-uno": "^0.60.2",
+    "@unocss/transformer-variant-group": "^0.60.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint-plugin-nomyfan": "^0.1.3",
@@ -45,10 +51,10 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
+    "unocss": "^0.60.2",
     "vite": "^5.2.11",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2",
     "workbox-window": "^7.1.0"
   },
   "lint-staged": {
