chore: add toolkit-js

--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ./src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@callcc/toolkit-js": "^0.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
