--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "prepare": "husky",
     "precommit": "pnpm run --filter gameboy precommit"
   },
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754",
   "devDependencies": {
+    "@biomejs/biome": "^1.9.2",
     "husky": "^9.1.6"
   }
 }
