--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scripts",
   "version": "0.0.0",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754",
   "scripts": {
     "genicons": "node genicons.mjs"
   },
