feat: use cva to create variants

--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@unocss/reset": "^0.62.4",
     "@zip.js/zip.js": "^2.7.52",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "crc-32": "^1.2.2",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.8",
@@ -50,7 +52,6 @@
     "@unocss/transformer-variant-group": "^0.62.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint-plugin-nomyfan": "^0.1.3",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
