--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:monthly"]
+  "extends": ["config:base", "schedule:monthly"],
+  "rangeStrategy": "bump"
 }
