feat: `using` keyword(explicit resource management)

--- a/app/gameboy/tsconfig.json
+++ b/app/gameboy/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext", "DOM.AsyncIterable"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
