--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -33,6 +33,7 @@
     "dexie": "^4.0.8",
     "gb_wasm": "link:../../crates/gb_wasm/npm",
     "immer": "^10.1.1",
+    "is-mobile": "^5.0.0",
     "js-xxhash": "^4.0.0",
     "lodash.clonedeep": "^4.5.0",
     "react": "^18.3.1",
