--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@tanstack/react-query": "^5.62.0",
     "@unocss/reset": "^0.63.6",
     "@zip.js/zip.js": "^2.7.52",
     "class-variance-authority": "^0.7.0",
@@ -39,7 +40,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.1",
-    "swr": "^2.2.5",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -54,7 +54,6 @@
     "autoprefixer": "^10.4.20",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "unocss": "^0.63.6",
     "vite": "^5.4.7",
