chore: upgrade deps

--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -25,9 +25,8 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-query": "^5.62.0",
-    "@unocss/reset": "^0.63.6",
-    "@zip.js/zip.js": "^2.7.52",
-    "class-variance-authority": "^0.7.0",
+    "@zip.js/zip.js": "^2.7.53",
+    "class-variance-authority": "^0.7.1",
     "crc-32": "^1.2.2",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.8",
@@ -42,23 +41,25 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@iconify-json/ic": "^1.2.0",
+    "@iconify-json/ic": "^1.2.1",
     "@types/lodash.clonedeep": "^4.5.9",
-    "@types/node": "^20.16.7",
-    "@types/react": "^18.3.11",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@unocss/preset-icons": "^0.63.6",
-    "@unocss/transformer-variant-group": "^0.63.6",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@unocss/preset-icons": "^0.64.1",
+    "@unocss/reset": "^0.64.1",
+    "@unocss/transformer-variant-group": "^0.64.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "typescript": "^5.6.2",
-    "unocss": "^0.63.6",
-    "vite": "^5.4.7",
-    "vite-plugin-pwa": "^0.20.5",
-    "vite-plugin-svgr": "^4.2.0",
-    "workbox-window": "^7.1.0"
+    "unocss": "^0.64.1",
+    "vite": "^5.4.11",
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-svgr": "^4.3.0",
+    "workbox-build": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": ["biome check --fix"]
