--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ log = { version = "0.4.21" }
 anyhow = "1.0.94"
 mockall = "0.12.1"
 web-time = "1.1.0"
-wasm-bindgen = "0.2.92"
+wasm-bindgen = "=0.2.100"
 bincode = "1.3.3"
 serde = { version = "1.0.210", features = ["derive"] }
 web-sys = { version = "0.3.69" }
