--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -35,8 +35,8 @@
     "is-mobile": "^5.0.0",
     "js-xxhash": "^4.0.0",
     "lodash.clonedeep": "^4.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rxjs": "^7.8.1",
     "zustand": "^5.0.2"
   },
@@ -44,8 +44,8 @@
     "@iconify-json/ic": "^1.2.2",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20.17.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "@unocss/preset-icons": "^0.64.1",
     "@unocss/reset": "^0.64.1",
     "@unocss/transformer-variant-group": "^0.64.1",
@@ -62,6 +62,8 @@
     "workbox-window": "^7.3.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": ["biome check --fix"]
+    "src/**/*.{ts,tsx}": [
+      "biome check --fix"
+    ]
   }
 }
