--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -55,7 +55,7 @@
     "postcss": "^8.5.4",
     "typescript": "^5.8.3",
     "unocss": "^66.1.3",
-    "vite": "^6.3.5",
+    "vite": "npm:rolldown-vite@6.3.14",
     "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-svgr": "^4.3.0",
     "workbox-build": "^7.3.0",
