--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "husky": "^9.1.7"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vite-plugin-svgr": "patches/vite-plugin-svgr.patch"
+    }
   }
 }
