--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -49,13 +49,13 @@
     "@unocss/preset-icons": "^66.1.3",
     "@unocss/reset": "^66.1.3",
     "@unocss/transformer-variant-group": "^66.1.3",
-    "@vitejs/plugin-react": "^4.5.0",
+    "@vitejs/plugin-react-oxc": "^0.2.0",
     "autoprefixer": "^10.4.21",
     "lint-staged": "^15.5.2",
     "postcss": "^8.5.4",
     "typescript": "^5.8.3",
     "unocss": "^66.1.3",
-    "vite": "^6.3.5",
+    "vite": "npm:rolldown-vite@6.3.14",
     "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-svgr": "^4.3.0",
     "workbox-build": "^7.3.0",
