chore: use oxlint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,11 +95,15 @@ jobs:
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
+      - name: Lint.rs
+        run: cargo clippy --target wasm32-unknown-unknown
+
+      - name: Lint.js
+        working-directory: ./app/gameboy
+        run: oxlint
+
       - name: Run tests
         run: cargo test --workspace --exclude gb_wasm --target x86_64-unknown-linux-gnu
-
-      - name: Lint
-        run: cargo clippy --target wasm32-unknown-unknown
 
       - name: Build WASM
         working-directory: ./crates/gb_wasm
