--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "precommit": "npx lint-staged",
     "fmt": "biome format src",
-    "lint": "biome lint src"
+    "lint": "oxlint src"
   },
   "dependencies": {
     "@callcc/toolkit-js": "^0.1.6",
@@ -52,6 +52,7 @@
     "@vitejs/plugin-react-oxc": "^0.2.0",
     "autoprefixer": "^10.4.21",
     "lint-staged": "^15.5.2",
+    "oxlint": "^1.3.0",
     "postcss": "^8.5.4",
     "typescript": "^5.8.3",
     "unocss": "^66.1.3",
@@ -62,8 +63,6 @@
     "workbox-window": "^7.3.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "biome check --fix"
-    ]
+    "src/**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,astro,svelte}": ["oxlint"]
   }
 }
