--- a/app/gameboy/package.json
+++ b/app/gameboy/package.json
@@ -24,46 +24,45 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@tanstack/react-query": "^5.79.0",
-    "@zip.js/zip.js": "^2.7.62",
+    "@tanstack/react-query": "^5.90.2",
+    "@zip.js/zip.js": "^2.8.2",
     "class-variance-authority": "^0.7.1",
     "crc-32": "^1.2.2",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "dexie": "^4.0.11",
     "gb_wasm": "link:../../crates/gb_wasm/npm",
-    "immer": "^10.1.1",
+    "immer": "^10.1.3",
     "is-mobile": "^5.0.0",
     "js-xxhash": "^4.0.0",
     "lodash.clonedeep": "^4.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "rxjs": "^7.8.2",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/ic": "^1.2.4",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20.17.57",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
     "@unocss/preset-icons": "^66.5.2",
     "@unocss/reset": "^66.5.2",
     "@unocss/transformer-variant-group": "^66.5.2",
     "@vitejs/plugin-react-oxc": "^0.2.3",
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
     "lint-staged": "^15.5.2",
     "postcss": "^8.5.4",
     "typescript": "^5.8.3",
     "unocss": "^66.5.2",
     "vite": "npm:rolldown-vite@6.3.14",
-    "vite-plugin-pwa": "^1.0.0",
-    "vite-plugin-svgr": "^4.3.0",
+    "vite-plugin-pwa": "^1.0.3",
+    "vite-plugin-svgr": "^4.5.0",
     "workbox-build": "^7.3.0",
     "workbox-window": "^7.3.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "biome check --fix"
-    ]
+    "src/**/*.{ts,tsx}": ["biome check --fix"]
   }
 }
